# poc_cockroach

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: compose.yml  devcontainer.dockerfile  devcontainer.json
migrations/2024-05-02-071851_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
